# Youtube-Transcript-Generator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
youtube_transcript_generator/: cli.py
